--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/navbar.css">
     <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -24,7 +25,16 @@
         </button>
     </nav>
 </header>
-<main></main>
+<main>
+    <div class="date-info-card">
+        <div class="date-container">
+            <h2>Vigtige Datoer</h2>
+            <p id="dealine-date"> Tilmeldingsfrist: </p>
+            <p id="exam-date"> Næste prøve: </p>
+            <p id="today-date"> Idag:</p>
+        </div>
+    </div>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  nn
+</main>
 <footer></footer>
 <script src="js/navbar.js"></script>
 </body>
